--- a/bookshopclient/src/styles.css
+++ b/bookshopclient/src/styles.css
@@ -45,3 +45,13 @@
 .item-data1 img{
   width: 4rem;
 }
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
