--- a/bookshopclient/src/styles.css
+++ b/bookshopclient/src/styles.css
@@ -55,3 +55,9 @@
     display: inline-block;
     font-size: 16px;
   }
+  footer {
+    text-align: center;
+    padding: 3px;
+    background-color: #155580;
+    color: white;
+  }
